# csvreader

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
app/: CMakeLists.txt
app/src/: main.cpp
data/: test_11.csv  test_12.csv  test_13.csv  test_14.csv  test_15.csv  test_16.csv  test_17.csv  test_18.csv  test_19.csv  test_2.csv  test_20.csv  test_3.csv  test_4.csv  test_5.csv  test_6.csv  test_7.csv  test_8.csv
table/: CMakeLists.txt
table/include/table/: table.hpp  utils.hpp
table/src/: table.cpp  utils.cpp
tests/: CMakeLists.txt
tests/table_test/: CMakeLists.txt  table_test.cpp  utils_test.cpp
